# rurl

./: .gitignore  Cargo.toml  README.md
example/: example.rs
examples/: c_example.rs
script/: main.py  pyproject.toml
script/src/: main.py
scripts/: pyproject.toml
src/: client.rs  http_req.rs  http_request.rs  lib.rs  main.rs  resolve.rs  utils.rs
test/: main.py
